<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dip">


    <ImageView
        android:id="@+id/cryptoImage"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="Name (Symbol)"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/cryptoImage"
        android:textSize="27sp" />


    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/cryptoImage"
        android:layout_below="@id/heading">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btcPriceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/btc"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rankOneHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="40dp"
                android:singleLine="true"
                android:text="@string/_1_h"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/rankOneHourImage"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginStart="5dip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip">

            <TextView
                android:id="@+id/usdPriceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/usd"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rank24Hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="40dp"
                android:singleLine="true"
                android:text="@string/_24_h"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/rank24HoursImage"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginStart="5dip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip">

            <TextView
                android:id="@+id/customPriceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rank7Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="40dp"
                android:singleLine="true"
                android:text="@string/_7_d"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/rank7DaysImage"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginStart="5dip" />
        </TableRow>

    </TableLayout>


</RelativeLayout>